fix truncate width of links

--- a/civictechprojects/static/css/partials/_IconLinkDisplay.scss
+++ b/civictechprojects/static/css/partials/_IconLinkDisplay.scss
@@ -27,7 +27,7 @@
 
 .IconLink-right {
   float: right;
-  width: 170px;
+  width: 200px;
   height:64px;
   line-height: 23px;
   border-top: 1px solid lightgray;
